fixed arenas + more (have to fix inventorys not giving back)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,6 @@
 name: "AscendDuels"
 version: "1.0.0-SNAPSHOT"
-authors: "JordanFails"
+authors:
+  - "JordanFails"
 main: "me.jordanfails.ascendduels.AscendDuels"
+depend: [ PWCore, WorldEdit ]
